syntax = "proto3";

package insider.sdk;

message footer {
    int32 crc16 = 1;
}